--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,70 @@
 <main>
-    <h1>Hello from Angular 2 App with Webpack</h1>
-    <img src="../../public/images/angular.png">
+    <md-sidenav-layout [class.m2app-dark]="isDarkTheme">
+        <h1>Hello from Angular 2 App with Webpack</h1>
+        <img src="../../public/images/angular.png">
+
+        <md-card>
+            <button md-button>FLAT</button>
+            <button md-raised-button md-tooltip="This is a tooltip!">RAISED</button>
+            <button md-raised-button color="primary">PRIMARY RAISED</button>
+            <button md-raised-button color="accent">ACCENT RAISED</button>
+        </md-card>
+
+        <md-card>
+            <md-checkbox>Unchecked</md-checkbox>
+            <md-checkbox [checked]="true">Checked</md-checkbox>
+            <md-checkbox [indeterminate]="true">Indeterminate</md-checkbox>
+            <md-checkbox [disabled]="true">Disabled</md-checkbox>
+        </md-card>
+
+        <md-card>
+            <md-radio-button name="symbol">Alpha</md-radio-button>
+            <md-radio-button name="symbol">Beta</md-radio-button>
+            <md-radio-button name="symbol" disabled>Gamma</md-radio-button>
+        </md-card>
+
+        <md-card class="app-input-section">
+            <md-input placeholder="First name"></md-input>
+
+            <md-input #nickname placeholder="Nickname" maxlength="50">
+                <md-hint align="end">
+                    {{nickname.characterCount}} / 50
+                </md-hint>
+            </md-input>
+
+            <md-input>
+                <md-placeholder>
+                    <i class="material-icons app-input-icon">android</i> Favorite phone
+                </md-placeholder>
+            </md-input>
+
+            <md-input placeholder="Motorcycle model">
+                <span md-prefix>
+            <i class="material-icons app-input-icon">motorcycle</i>
+            &nbsp;
+            </span>
+            </md-input>
+        </md-card>
+
+        <md-card>
+            <md-tab-group>
+                <md-tab>
+                    <template md-tab-label>
+                Earth
+            </template>
+                    <template md-tab-content>
+                <p>EARTH</p>
+            </template>
+                </md-tab>
+                <md-tab>
+                    <template md-tab-label>
+                Fire
+            </template>
+                    <template md-tab-content>
+                <p>FIRE</p>
+            </template>
+                </md-tab>
+            </md-tab-group>
+        </md-card>
+    </md-sidenav-layout>
 </main>
